[package]
name = "orb-billing"
authors = ["Materialize, Inc."]
readme = "README.md"
description = "An async API client for the Orb billing platform."
documentation = "https://docs.rs/orb"
license = "Apache-2.0"
categories = ["api-bindings", "web-programming"]
keywords = ["orb", "billing", "api", "sdk"]
repository = "https://github.com/MaterializeInc/rust-orb-billing"
version = "0.7.1"
rust-version = "1.70"
edition = "2021"

[dependencies]
async-stream = "0.3.3"
codes-iso-3166 = "0.1.3"
codes-iso-4217 = "0.1.5"
futures-core = "0.3.25"
futures-util = "0.3.25"
once_cell = "1.16.0"
ordered-float = { version = "3.4.0", features = ["serde"] }
rand = "0.8.5"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.151", features = ["derive"] }
serde-enum-str = "0.3.2"
serde_json = "1.0.91"
time = { version = "0.3.17", features = ["serde", "serde-human-readable"] }
tokio = { version = "1.23.0" }
uuid = { version = "1.2.2", features = ["serde", "v4"] }

[dev-dependencies]
futures = "0.3.25"
test-log = { version = "0.2.11", default-features = false, features = ["trace"] }
tokio = { version = "1.23.0", features = ["macros"] }
tokio-stream = "0.1.11"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
